Added some extra functionality.

--- a/python_workflows/01-01 Create Random Fish DataSet.ipynb
+++ b/python_workflows/01-01 Create Random Fish DataSet.ipynb
@@ -100,6 +100,8 @@
     "        else:\n",
     "            ret_list = np.append(ret_list, neuron_data, axis=1)\n",
     "        random.shuffle(ret_list)\n",
+    "        for row in ret_list:\n",
+    "            random.shuffle(row)\n",
     "    return ret_list"
    ]
   },
@@ -119,8 +121,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting  20:20:48.645627\n",
-      "Finished  20:21:16.133978\n"
+      "Starting  19:48:26.286981\n",
+      "Finished  21:04:32.921298\n"
      ]
     }
    ],
