--- a/python_workflows/03 Create PCA Models.ipynb
+++ b/python_workflows/03 Create PCA Models.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,11 +97,11 @@
        "model_path                pca_models_pickled/subject_r2_PCA_model_num_co...\n",
        "orig_data_path                 data_raw_pickled/subject_r2_CellRespZ.pickle\n",
        "n_components                                                             10\n",
-       "sum_explained_variance                                             0.383275\n",
+       "sum_explained_variance                                           0.00470673\n",
        "Name: subject_r2, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
