--- a/python_workflows/04 Neuron Loadings and Component Geographic Scoring.ipynb
+++ b/python_workflows/04 Neuron Loadings and Component Geographic Scoring.ipynb
@@ -41,8 +41,8 @@
     "subject_coord_dict = {}\n",
     "plotting_list = []\n",
     "neuron_xyz_dir = 'data_raw_pickled/'\n",
-    "minimum_neuron_count_in_bin = 50\n",
-    "num_bins = {'x': 40, 'y':20, 'z':2}\n",
+    "minimum_neuron_count_in_bin = 15\n",
+    "num_bins = {'x': 50, 'y':30, 'z':3} \n",
     "color_map = ['blue','red','green','orange','pink','black','brown','yellow','grey','purple']\n",
     "legend_data=[Patch(facecolor=color_map[index], edgecolor='black',label='Component '+ str(index)) for index in range(0,len(color_map))]"
    ]
@@ -214,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting Computations 19:30:19.656533\n"
+      "Starting Computations 13:23:50.139228\n"
      ]
     }
    ],
@@ -231,7 +231,10 @@
     "        'xyz': subject_coords,\n",
     "        'xyz_norm': norm_coords[['x','y','z']],\n",
     "        'bin_labels': norm_coords[['bin']]\n",
-    "    }"
+    "    }\n",
+    "# making entries for random subjects:\n",
+    "subject_coord_dict[\"subject_r1\"] = subject_coord_dict[\"subject_01\"]\n",
+    "subject_coord_dict[\"subject_r2\"] = subject_coord_dict[\"subject_01\"]"
    ]
   },
   {
@@ -245,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished Computations 19:31:42.452432\n"
+      "Finished Computations 13:27:33.964250\n"
      ]
     }
    ],
@@ -270,247 +273,6 @@
     "    })\n",
     "pickle_file('data_synthesized_pickled/geo_plotting_data.pickle', plotting_list)\n",
     "finished_run('Computations')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>bin</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>859.0</th>\n",
-       "      <td>-1.225337</td>\n",
-       "      <td>-1.686673</td>\n",
-       "      <td>-1.670435</td>\n",
-       "      <td>-1.749318</td>\n",
-       "      <td>-1.278705</td>\n",
-       "      <td>-1.600191</td>\n",
-       "      <td>-1.347184</td>\n",
-       "      <td>-1.499326</td>\n",
-       "      <td>-1.261266</td>\n",
-       "      <td>-0.736511</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>860.0</th>\n",
-       "      <td>0.068027</td>\n",
-       "      <td>-0.461696</td>\n",
-       "      <td>-0.593528</td>\n",
-       "      <td>0.177862</td>\n",
-       "      <td>-0.237793</td>\n",
-       "      <td>-0.735562</td>\n",
-       "      <td>1.093486</td>\n",
-       "      <td>-0.219474</td>\n",
-       "      <td>0.342483</td>\n",
-       "      <td>1.340553</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>861.0</th>\n",
-       "      <td>0.819674</td>\n",
-       "      <td>0.046434</td>\n",
-       "      <td>-0.152355</td>\n",
-       "      <td>0.447555</td>\n",
-       "      <td>0.329137</td>\n",
-       "      <td>-0.009518</td>\n",
-       "      <td>1.458340</td>\n",
-       "      <td>0.451164</td>\n",
-       "      <td>1.015309</td>\n",
-       "      <td>2.387946</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>862.0</th>\n",
-       "      <td>0.377580</td>\n",
-       "      <td>0.085747</td>\n",
-       "      <td>-0.423961</td>\n",
-       "      <td>0.688114</td>\n",
-       "      <td>0.030047</td>\n",
-       "      <td>-0.043670</td>\n",
-       "      <td>0.823522</td>\n",
-       "      <td>-0.314502</td>\n",
-       "      <td>0.723282</td>\n",
-       "      <td>1.427799</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>863.0</th>\n",
-       "      <td>-1.060103</td>\n",
-       "      <td>-1.801966</td>\n",
-       "      <td>-1.483616</td>\n",
-       "      <td>-1.427408</td>\n",
-       "      <td>-1.158318</td>\n",
-       "      <td>-1.752293</td>\n",
-       "      <td>-1.157734</td>\n",
-       "      <td>-1.530487</td>\n",
-       "      <td>-1.353661</td>\n",
-       "      <td>-0.917071</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2345.0</th>\n",
-       "      <td>-0.835749</td>\n",
-       "      <td>-1.033544</td>\n",
-       "      <td>-0.937831</td>\n",
-       "      <td>-0.676775</td>\n",
-       "      <td>-0.786645</td>\n",
-       "      <td>-0.542524</td>\n",
-       "      <td>-1.095558</td>\n",
-       "      <td>-0.807885</td>\n",
-       "      <td>-1.081916</td>\n",
-       "      <td>-0.843764</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2346.0</th>\n",
-       "      <td>-0.793740</td>\n",
-       "      <td>-1.005180</td>\n",
-       "      <td>-0.504489</td>\n",
-       "      <td>-0.316411</td>\n",
-       "      <td>-0.633489</td>\n",
-       "      <td>-0.749396</td>\n",
-       "      <td>-1.046807</td>\n",
-       "      <td>-0.868710</td>\n",
-       "      <td>-0.454954</td>\n",
-       "      <td>-0.580370</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2382.0</th>\n",
-       "      <td>-0.978108</td>\n",
-       "      <td>-1.013960</td>\n",
-       "      <td>-0.564578</td>\n",
-       "      <td>-0.917332</td>\n",
-       "      <td>-0.666027</td>\n",
-       "      <td>-0.879910</td>\n",
-       "      <td>-1.096505</td>\n",
-       "      <td>-0.982513</td>\n",
-       "      <td>-0.695547</td>\n",
-       "      <td>-0.838296</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2383.0</th>\n",
-       "      <td>-0.283861</td>\n",
-       "      <td>0.055718</td>\n",
-       "      <td>0.851395</td>\n",
-       "      <td>1.034270</td>\n",
-       "      <td>0.698694</td>\n",
-       "      <td>-0.082625</td>\n",
-       "      <td>-0.191481</td>\n",
-       "      <td>-0.568307</td>\n",
-       "      <td>0.442090</td>\n",
-       "      <td>0.094276</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2384.0</th>\n",
-       "      <td>-1.202489</td>\n",
-       "      <td>-1.317134</td>\n",
-       "      <td>-1.146344</td>\n",
-       "      <td>-1.159900</td>\n",
-       "      <td>-1.241890</td>\n",
-       "      <td>-1.072693</td>\n",
-       "      <td>-1.216785</td>\n",
-       "      <td>-1.424652</td>\n",
-       "      <td>-1.370031</td>\n",
-       "      <td>-1.201868</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>630 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               0         1         2         3         4         5         6  \\\n",
-       "bin                                                                            \n",
-       "859.0  -1.225337 -1.686673 -1.670435 -1.749318 -1.278705 -1.600191 -1.347184   \n",
-       "860.0   0.068027 -0.461696 -0.593528  0.177862 -0.237793 -0.735562  1.093486   \n",
-       "861.0   0.819674  0.046434 -0.152355  0.447555  0.329137 -0.009518  1.458340   \n",
-       "862.0   0.377580  0.085747 -0.423961  0.688114  0.030047 -0.043670  0.823522   \n",
-       "863.0  -1.060103 -1.801966 -1.483616 -1.427408 -1.158318 -1.752293 -1.157734   \n",
-       "...          ...       ...       ...       ...       ...       ...       ...   \n",
-       "2345.0 -0.835749 -1.033544 -0.937831 -0.676775 -0.786645 -0.542524 -1.095558   \n",
-       "2346.0 -0.793740 -1.005180 -0.504489 -0.316411 -0.633489 -0.749396 -1.046807   \n",
-       "2382.0 -0.978108 -1.013960 -0.564578 -0.917332 -0.666027 -0.879910 -1.096505   \n",
-       "2383.0 -0.283861  0.055718  0.851395  1.034270  0.698694 -0.082625 -0.191481   \n",
-       "2384.0 -1.202489 -1.317134 -1.146344 -1.159900 -1.241890 -1.072693 -1.216785   \n",
-       "\n",
-       "               7         8         9  \n",
-       "bin                                   \n",
-       "859.0  -1.499326 -1.261266 -0.736511  \n",
-       "860.0  -0.219474  0.342483  1.340553  \n",
-       "861.0   0.451164  1.015309  2.387946  \n",
-       "862.0  -0.314502  0.723282  1.427799  \n",
-       "863.0  -1.530487 -1.353661 -0.917071  \n",
-       "...          ...       ...       ...  \n",
-       "2345.0 -0.807885 -1.081916 -0.843764  \n",
-       "2346.0 -0.868710 -0.454954 -0.580370  \n",
-       "2382.0 -0.982513 -0.695547 -0.838296  \n",
-       "2383.0 -0.568307  0.442090  0.094276  \n",
-       "2384.0 -1.424652 -1.370031 -1.201868  \n",
-       "\n",
-       "[630 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "plotting_list[0]['bin_scores']"
    ]
   },
   {
